--- a/packages/dvaSSR/package.json
+++ b/packages/dvaSSR/package.json
@@ -70,6 +70,7 @@
     "isomorphic-style-loader": "^4.0.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "name-all-modules-plugin": "^1.0.1",
     "postcss-loader": "^2.0.9",
     "react-hot-loader": "^3.1.3",
     "rimraf": "^2.6.2",
@@ -78,6 +79,7 @@
     "svg-sprite-loader": "^3.5.1",
     "url-loader": "^0.6.2",
     "webpack": "3.8.1",
+    "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-server": "^2.9.5",
     "webpack-merge": "^4.1.1"
   }
