--- a/packages/dvaSSR/client/.eslintrc
+++ b/packages/dvaSSR/client/.eslintrc
@@ -7,7 +7,9 @@
     "react/prefer-stateless-function": [0],
     "react/prop-types": [0],
     "import/prefer-default-export": [0],
-    "global-require": [0]
+    "global-require": [0],
+    "no-param-reassign": [0],
+    "no-underscore-dangle": [0]
   },
   "env": {
     "browser": true,
