--- a/packages/dvaSSR/package.json
+++ b/packages/dvaSSR/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cnode-demo",
+  "name": "dvaSSR",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,7 +20,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
-    "dva": "^2.1.0",
+    "compression": "^1.7.1",
     "dva-core": "^1.1.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
@@ -31,6 +31,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "serialize-javascript": "^1.4.0",
@@ -42,6 +43,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dva-hmr": "^0.4.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
